--- a/CUDA/CUDA.vcxproj
+++ b/CUDA/CUDA.vcxproj
@@ -166,13 +166,16 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="matrix.cu" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="adam.h" />
     <ClInclude Include="distribution_classification.h" />
     <ClInclude Include="matrix.cuh" />
     <ClInclude Include="network.h" />
+    <ClInclude Include="solver.h" />
     <ClInclude Include="statistical.h" />
     <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="adam.cpp" />
     <ClCompile Include="distribution_classification.cpp" />
     <ClCompile Include="network.cpp" />
     <ClCompile Include="statistical.cpp" />
